# meditation-app

./: LICENSE  Makefile  README.md  TODO  main.py  pyproject.toml  pyttsx3_test.py  subprocess_say_test.py
experiment/: pyttsx3_test.py  subprocess_say_test.py
meditate/: __main__.py
