[tool.poetry]
package-mode = false
name = "meditation-app"
version = "0.2.0"
description = ""
authors = ["Michael Currin <18750745+MichaelCurrin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.8"
langchain-core = "^0.3.19"
pyttsx3 = "^2.98"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
