[tool.poetry]
package-mode = false
name = "meditation-app"
version = "0.3.0"
description = "CLI Python interactive meditation app powered by an LLM and text to speech"
authors = ["Michael Currin <18750745+MichaelCurrin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.3.16"
langchain-core = "^0.3.81"
pyttsx3 = "^2.98"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
